--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.2",
-    "eslint-plugin-import": "^2.27.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
@@ -27,11 +26,15 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
+    "plugins": [
+      "import"
+    ],
     "parser": "@typescript-eslint/parser",
     "extends": [
       "react-app",
       "react-app/jest",
-      "plugin:@typescript-eslint/recommended"
+      "plugin:@typescript-eslint/recommended",
+      "plugin:import/recommended"
     ],
     "rules": {
       "import/order": [
@@ -41,7 +44,13 @@
             "builtin",
             "external",
             "internal",
-            "index"
+            [
+              "sibling",
+              "parent",
+              "index"
+            ],
+            "type",
+            "unknown"
           ],
           "alphabetize": {
             "order": "asc",
@@ -50,6 +59,7 @@
           "newlines-between": "always"
         }
       ],
+      "import/no-unresolved": "off",
       "no-confusing-arrow": "off",
       "implicit-arrow-linebreak": "off",
       "object-curly-newline": "off",
@@ -73,6 +83,7 @@
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.6.2"
   }
