--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wanted-pre-onboarding-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dlwnstjrzz.github.io/wanted-pre-onboarding-frontend/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -85,6 +88,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
+    "gh-pages": "^5.0.0",
     "prettier": "^2.6.2"
   }
 }
